2005-01-05  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/notation.itely (Setting simple songs):
	Correct several errors in the equivalent formulation of
	\addlyrics. 
	(The Lyrics context): Corrected link to the SATB example.


2004-12-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/changing-defaults.itely: Fix internalsrefs
	{Tunable context properties},
	{All layout objects},
	{Music definitions}.

2004-12-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/lexer.ll: add  <> to catch-all string rule

2004-11-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/abc2ly.py: add ord() calls. 

2004-12-03  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* cygwin/lily-wins.py (stat): remove old flag -p when calling lilypond.

2004-11-22  Erik Sandberg  <ersa9195@student.uu.se>

	* ly/dynamic-scripts-init.ly: Fixed typo.

2004-11-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION: release 2.4.3

	* scm/define-markup-commands.scm (fill-line): use stack-stencils
	iso. stack-stencils-line. Fixes putting centered objects into
	fill-line.

	* lily/bar-line.cc (get_staff_bar_size): backport for bar y-size
	fix.

2004-11-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/convert-ly.py (conv): backport convert-ly warnings.

2004-11-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/parser.yy:
	(re_rhythmed_music): search for first Voice with context-id. This
	fixes addlyrics-second-staff.ly
	
2004-11-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/lexer.ll: allow \encoding in lyrics as well.  Remove
	optional semicolon. (backportme)

	* VERSION: release 2.4.2
	
2004-11-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* python/GNUmakefile (STEPMAKE_TEMPLATES): Unset USER_LDFLAGS, no
	need to link to GUILE et al.

2004-11-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/lily.scm (sanitize-command-option): new function. (backportme)

	* scm/framework-tex.scm (header): sanitize TeX paper size.
	(backportme)

2004-11-06  Jan Nieuwenhuizen  <janneke@gnu.org>
