@@ -1,3 +1,13 @@
+2005-01-03  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	Backport teTeX-3.0 compatibility.
+	
+	* SConstruct: 
+	* ps/GNUmakefile (INSTALLATION_FILES): teTeX-3.0
+	compatibility (backportme).
+
+	* GNUmakefile.in: teTeX-3.0 compatibility (backportme).
+
 2005-01-05  Mats Bengtsson  <mabe@drongo.s3.kth.se>
 
 	* Documentation/user/notation.itely (Setting simple songs):
